--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
