--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.16",
     "@googlemaps/js-api-loader": "^1.15.1",
+    "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "appointment-picker": "^2.0.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
