--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fall-out/react-calendar": "^1.0.3",
     "@googlemaps/js-api-loader": "^1.15.1",
     "@mui/material": "^5.10.16",
     "@react-google-maps/api": "^2.17.0",
@@ -17,6 +18,7 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-date-picker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
