--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-date-picker": "^9.1.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-timepicker": "^1.0.4",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23",
