--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@fall-out/react-calendar": "^1.0.3",
     "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/material": "^5.10.16",
     "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +17,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "framer-motion": "^7.7.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-date-picker": "^9.1.0",
