--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.1",
+    "react-bootstrap": "^2.7.0",
     "react-date-picker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-dropdown-timepicker": "^1.0.4",
