--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@googlemaps/js-api-loader": "^1.15.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/material": "^5.10.16",
-    "@popperjs/core": "^2.11.6",
     "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +19,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^7.7.2",
     "lodash": "^4.17.21",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.1",
     "react-date-picker": "^9.1.0",
