--- a/package.json
+++ b/package.json
@@ -27,8 +27,68 @@
     "react-dropdown-timepicker": "^1.0.4",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
-    "react-paystack": "^4.0.1",
     "react-popper": "^2.3.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
+}
+{
+  "name": "easyrent",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fall-out/react-calendar": "^1.0.3",
+    "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/material": "^5.10.16",
+    "@react-google-maps/api": "^2.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "appointment-picker": "^2.0.0",
+    "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.7.2",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-auth-kit": "^2.7.1",
+    "react-date-picker": "^9.1.0",
+    "react-dom": "^18.2.0",
+    "react-dropdown-timepicker": "^1.0.4",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.7.1",
+    "react-paystack": "^4.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
